--- a/templates/student_form.html
+++ b/templates/student_form.html
@@ -44,6 +44,19 @@
       <option value="ME">Mechanical Engineering</option>
     </select>
     <br>
+    <label>Date:</label>
+    <input type="text" name="date">
+    <br>
+    <label>year:</label>
+    <input type="text" name="year">
+    <br>
+    <label>Month:</label>
+    <select name="Month">
+      <option value="jan">January</option>
+      <option value="feb">feb</option>
+      <option value="mar">march</option>
+    </select>
+    <br>
     <label>Leave Status:</label>
     <input type="file" name="leave_status">
     <br>
